frontend/test/should_fail/cast_transient_object_types_exec.grg
using cast_model;

rule r {
	modify {
	---
		def ref unrelTO:UnrelTO;
		exec ({
			unrelTO = (UnrelTO)new TO()
		});
	}
}
